# uvoxid

./: .gitignore  README.md  pyproject.toml
src/uvoxid/: __init__.py  core.py  corrections.py  entanglement.py  ephemeris.py  moon.py  scale.py  sun.py  sunmoon.py
src/uvoxid/utils/: __init__.py  area.py  distance.py  geometry.py  orientation.py  tolerance.py
tests/: test_tolerance.py
