[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uvoxid"
version = "0.1.0"
description = "Universal Voxel Identifier (UVoxID) — deterministic 192-bit coordinate system for spherical space"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name="Dr.Ippy", email="jdplumbingsoflo@gmail.com" }
]
requires-python = ">=3.9"
keywords = ["coordinates", "spatial", "voxel", "physics", "geospatial"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/JDPlumbing/uvoxid"
Repository = "https://github.com/JDPlumbing/uvoxid"
